"My bookings" funkar styling behövs

--- a/src/main/resources/templates/myBookings.html
+++ b/src/main/resources/templates/myBookings.html
@@ -12,6 +12,16 @@
     <center><img src="../static/bekraftelse.jpg" th:src="${'/bekraftelse.jpg'}"></center>
 </div>
 
+<center>
+    <p><span th:text="${myBooking.people}"></span></p>
+    <p><span th:text="${myBooking.restaurant}"></span></p>
+    <p><span th:text="${myBooking.restaurantLank}"></span></p>
+    <p><span th:text="${myBooking.day}"></span></p>
+    <p><span th:text="${myBooking.time}"></span></p>
+    <p><span th:text="${myBooking.email}"></span></p>
+    <p><span th:text="${myBooking.phonenumber}"></span></p>
+
+</center>
 
 </body>
 </html>
