--- a/src/main/resources/templates/myBookings.html
+++ b/src/main/resources/templates/myBookings.html
@@ -13,13 +13,19 @@
 </div>
 
 <center>
-    <p><span th:text="${myBooking.people}"></span></p>
-    <p><span th:text="${myBooking.restaurant}"></span></p>
-    <p><span th:text="${myBooking.restaurantLank}"></span></p>
-    <p><span th:text="${myBooking.day}"></span></p>
-    <p><span th:text="${myBooking.time}"></span></p>
-    <p><span th:text="${myBooking.email}"></span></p>
-    <p><span th:text="${myBooking.phonenumber}"></span></p>
+    <div th:if="${myBooking.people != 0}">
+        <p>Du är bokad för <span th:text="${myBooking.people}"></span> personer.</p>
+        <p>På resturangen <span th:text="${myBooking.restaurant}"></span>.</p>
+        <p>För mer into gå till <span th:text="${myBooking.restaurantLank}"></span></p>
+        <p>Datum: <span th:text="${myBooking.day}"></span></p>
+        <p>Klockan: <span th:text="${myBooking.time}"></span></p>
+        <p>Vänligen uppge <span th:text="${myBooking.email}"></span> när ni kommer till resturangen</p>
+        <p>eller <span th:text="${myBooking.phonenumber}"></span></p>
+    </div>
+
+    <div th:if="${myBooking.people == 0}">
+        <span>Du har inga bokningar!</span>
+    </div>
 
 </center>
 
