--- a/src/main/resources/templates/myBookings.html
+++ b/src/main/resources/templates/myBookings.html
@@ -5,11 +5,10 @@
     <link rel="stylesheet" href="../static/indexPage.css" th:href="'/indexPage.css'">
     <title>MyBookings</title>
 </head>
-<STYLE>A {text-decoration: none;} </STYLE>
 <body>
 <div class="confirmation">
     &nbsp;<span><a href="/">Tillbaka till startsida</a></span>
-    <center><img src="../static/bekraftelse.jpg" th:src="${'/bekraftelse.jpg'}"></center>
+    <center><img src="../static/bekraftelse.jpg" id="confirmationTitle" th:src="${'/bekraftelse.jpg'}"></center>
 </div>
 
 <center>
