--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -6,10 +6,10 @@ h2 {
 }
 
 .title {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     width:100%;
     margin: auto;
     background-color: #c21f1f;
-
     font-size: 20px;
 }
 
@@ -113,7 +113,7 @@ img {
         font-size: 20px;
 }
 
-.addRestaurant {
+.addRestaurant a {
     color: #FFFFFF;
     text-decoration: none;
     margin-left: 5px;
@@ -163,11 +163,10 @@ a {
 
 .confirmation{
    font-family: "Questa Grande", "Palatino Linotype", serif;
-   font-size: 15px;
-     display:block;
-     #width:100%;
-     margin:auto;
-     background-color: #c21f1f;
+   width:100%;
+   margin: auto;
+   background-color: #c21f1f;
+   font-size: 20px;
 }
 
 .confirmation a {
@@ -175,6 +174,19 @@ a {
     text-decoration: none;
     margin-left: 5px;
 }
+
+#title {
+    display:block;
+    #width:100%;
+    margin:auto;
+    background-color: #c21f1f;
+}
+
+#confirmationTitle {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
+    color:#ffffff;
+}
+
 #headerbooking {
     font-family: "Questa Grande", "Palatino Linotype", serif;
     color:#ffffff;
@@ -182,7 +194,7 @@ a {
 
 .description {
     position: static;
-    font-family: Mongolian Baiti, Georgia, serif;
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     clear: both;
 
 
