--- a/src/main/resources/templates/Booking.html
+++ b/src/main/resources/templates/Booking.html
@@ -81,7 +81,7 @@
     Telefonnummer: <br>
     <input id="telNo" th:field="*{phonenumber}" type="tel" placeholder="telefonnummer">
      <br>
-
+        <input type="hidden" th:field="*{username}" th:value="${session.username}">
     <input type="submit" value="Boka"/> <br>
 
 </form>
