--- a/src/main/resources/templates/myBookings.html
+++ b/src/main/resources/templates/myBookings.html
@@ -13,7 +13,9 @@
 </div>
 
 <center>
+    <div th:each="myBooking: ${myBooking}">
     <div th:if="${myBooking.people != 0}">
+
         <p>Du är bokad för <span th:text="${myBooking.people}"></span> personer.</p>
         <p>På resturangen <span th:text="${myBooking.restaurant}"></span>.</p>
         <p>För mer into gå till <span th:text="${myBooking.restaurantLank}"></span></p>
@@ -21,10 +23,13 @@
         <p>Klockan: <span th:text="${myBooking.time}"></span></p>
         <p>Vänligen uppge <span th:text="${myBooking.email}"></span> när ni kommer till resturangen</p>
         <p>eller <span th:text="${myBooking.phonenumber}"></span></p>
+        </div>
     </div>
 
+    <div th:each="myBooking: ${myBooking}">
     <div th:if="${myBooking.people == 0}">
         <span>Du har inga bokningar!</span>
+    </div>
     </div>
 
 </center>
