--- a/src/main/resources/templates/myBookings.html
+++ b/src/main/resources/templates/myBookings.html
@@ -12,8 +12,8 @@
 </div>
 
 <center>
-    <div th:each="myBooking: ${myBooking}">
-    <div th:if="${myBooking.people != 0}">
+
+    <div th:each="myBooking: ${myBookingList}">
 
         <p>Du är bokad för <span th:text="${myBooking.people}"></span> personer.</p>
         <p>På resturangen <span th:text="${myBooking.restaurant}"></span>.</p>
@@ -22,13 +22,13 @@
         <p>Klockan: <span th:text="${myBooking.time}"></span></p>
         <p>Vänligen uppge <span th:text="${myBooking.email}"></span> när ni kommer till resturangen</p>
         <p>eller <span th:text="${myBooking.phonenumber}"></span></p>
+
+        <div th:if="${myBooking.people == 0}">
+            <span>Du har inga bokningar!</span>
         </div>
+
     </div>
 
-    <div th:each="myBooking: ${myBooking}">
-    <div th:if="${myBooking.people == 0}">
-        <span>Du har inga bokningar!</span>
-    </div>
     </div>
 
 </center>
