--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -20,7 +20,7 @@
         <h2 th:text="${'Tack för din bokning ' + booking.firstname} + ' !'"></h2><br><br>
     <div class="bekraft">
         <span th:text="${'Antal personer: ' + booking.people}" ></span> <br><br>
-        <span th:text="${'Du bokat bord den : ' + booking.day}" ></span> <br><br>
+        <span th:text="${'Du har bokat bord den : ' + booking.day}" ></span> <br><br>
         <span th:text="${'Klockan: ' + booking.time}" ></span> <br><br>
 
         <span th:text="${'Bekräftelse skickas till: ' + booking.email}" ></span> <br><br>
